# ITMO.Data-Structures-And-Algorithms

./: CMakeLists.txt  README.md
Laboratory№10/: Hogwarts.cpp  README.md  Scooters.cpp  TheLostCondition.cpp  Tinder.cpp
Laboratory№11/: FaceControl.cpp  InSearchOfVyazma.cpp  MIT(O)-HYIP_Park.cpp  README.md  SavingTheUnderworld.cpp  SecretsOfTimePortals.cpp  Tinder2.cpp
Laboratory№12/: CongressOfYoungScientists.cpp  InThe3rd-NinthKingdom.cpp  Petushki-Moscow.cpp  README.md  SpringFlood.cpp  SpringFlood2.cpp  TheGeniusOfOptimization.cpp
Laboratory№13/: BibaAndBoba.cpp  Carnations.cpp  README.md  RoadsidePicnic.cpp  Test.cpp  ThreeFriends3-TheCuckoo.cpp  WhatIsAMultitude.cpp
Laboratory№14/: 1984.cpp  Hogwarts.cpp  Poker.cpp  README.md  StrawberryVine.cpp
Laboratory№2/: Anti-QuickSort.c  Expedition.c  Fence.c  InsertionSort.c  MergeSort.c  NumberInserting.c  OlympiadResults.py  QuickSort.c  SimilarArrays.c  TheLibraryMethod.c  readme.md
Laboratory№3/: BinarySearch.c  Garland.c  MaxStack.c  PostfixEntry.c  Queue.c  README.md  SplittingTheArray.c  Stack.c  TheCorrectBracketSequence.c
Laboratory№4/: HeapSort.c  IsItPyramid.c  PriorityQueue.c  README.md  RadixSort.c
Laboratory№5/: BinarySearchTree.c  CheckingCorrectness.c  HeightOfTheTree.c  README.md  ThreeFriends.c  TreeFilling.c  TwoTraversals.c
Laboratory№6/: CheckingTheBalance.c  Detective.c  InsertingIntoAVL-Tree.c  MakingLeftTurn.c  PetyaFeedsTheCats.c  README.md
Laboratory№7/: Backpack.c  README.md
Laboratory№8/: EmperorMickeyAndHisDefenseSystem.c  Messages.c  README.md  TheDecoderOfTheMIT(O)University.cpp
Laboratory№9/: Gray'sBinaryCode.cpp  Hotel.cpp  Ivan'sApartment.cpp  NP-completeTask.cpp  OnThePlanetAndora.cpp  README.md  TheCityOfBridges.cpp
