cmake_minimum_required(VERSION 3.27)
project(A_DS C)

set(CMAKE_CXX_STANDARD 20)

add_executable(A_DS
        Laboratory№2/NumberInserting.c
        Laboratory№2/InsertionSort.c
        Laboratory№2/Expedition.c
        Laboratory№2/TheLibraryMethod.c
        Laboratory№2/MergeSort.c
        Laboratory№2/SimilarArrays.c
        Laboratory№2/Fence.c
        Laboratory№2/QuickSort.c
        Laboratory№2/Anti-QuickSort.c
        Laboratory№3/Queue.c
        Laboratory№3/Stack.c
        Laboratory№3/TheCorrectBracketSequence.c
        Laboratory№3/PostfixEntry.c
        Laboratory№3/MaxStack.c
        Laboratory№3/BinarySearch.c
        Laboratory№3/Garland.c
        Laboratory№3/SplittingTheArray.c
        Laboratory№4/HeapSort.c
        Laboratory№4/IsItPyramid.c
        Laboratory№4/PriorityQueue.c
        Laboratory№4/RadixSort.c
        Laboratory№5/HeightOfTheTree.c
        Laboratory№5/CheckingCorrectness.c
        Laboratory№5/TreeFilling.c
        Laboratory№5/BinarySearchTree.c
        Laboratory№5/ThreeFriends.c
        Laboratory№5/TwoTraversals.c
        Laboratory№6/CheckingTheBalance.c
        Laboratory№6/MakingLeftTurn.c
        Laboratory№6/InsertingIntoAVL-Tree.c
        Laboratory№6/Detective.c
        Laboratory№6/PetyaFeedsTheCats.c
        Laboratory№7/Backpack.c
        Laboratory№8/EmperorMickeyAndHisDefenseSystem.c
        Laboratory№8/Messages.c
        Laboratory№8/TheDecoderOfTheMIT(O)University.cpp
        Laboratory№9/Gray'sBinaryCode.cpp
        Laboratory№9/TheCityOfBridges.cpp
        Laboratory№9/Ivan'sApartment.cpp
        Laboratory№9/Hotel.cpp
        "Laboratory№9/OnThePlanetAndora.cpp"
        Laboratory№9/NP-completeTask.cpp
        Laboratory№10/Hogwarts.cpp
        Laboratory№10/Tinder.cpp
        Laboratory№10/Scooters.cpp
        Laboratory№10/TheLostCondition.cpp
        Laboratory№11/SecretsOfTimePortals.cpp
        "Laboratory№11/MIT(O)-HYIP_Park.cpp"
        Laboratory№11/FaceControl.cpp
        Laboratory№11/InSearchOfVyazma.cpp
        Laboratory№11/SavingTheUnderworld.cpp
        Laboratory№11/Tinder2.cpp
        Laboratory№12/SpringFlood.cpp
        Laboratory№12/SpringFlood2.cpp
        Laboratory№12/InThe3rd-NinthKingdom.cpp
        Laboratory№12/Petushki-Moscow.cpp
        Laboratory№12/TheGeniusOfOptimization.cpp
        Laboratory№12/CongressOfYoungScientists.cpp
        Laboratory№13/Carnations.cpp
        Laboratory№13/RoadsidePicnic.cpp
        Laboratory№13/WhatIsAMultitude.cpp
        Laboratory№13/Test.cpp
        Laboratory№13/BibaAndBoba.cpp
        Laboratory№13/ThreeFriends3-TheCuckoo.cpp
        "Laboratory№14/1984.cpp"
        Laboratory№14/Hogwarts.cpp
        Laboratory№14/StrawberryVine.cpp
        Laboratory№14/Poker.cpp
)
